BugzID: 3821 - Children's Theater Festival Bug Fixes (#66)
Fixed mobile navigation so it doesn't cover the whole header
Fixed width of frog on smaller layouts so he shows up and isn't hidden anymore.

--- a/app/assets/stylesheets/contexts/_site-header.scss
+++ b/app/assets/stylesheets/contexts/_site-header.scss
@@ -69,7 +69,7 @@
   $iconDuration: 0.6s;
   $iconEasing: cubic-bezier(.25,1.7,.35,.8);
 
-  @include breakpoint($breakpoint-xs) {
+  @include breakpoint($breakpoint-xxs) {
     @include column(4);
     @include last;
   }
